--- a/_sources/computations.ipynb
+++ b/_sources/computations.ipynb
@@ -5,7 +5,9 @@
    "id": "aboriginal-folks",
    "metadata": {},
    "source": [
-    "# Computations with large datasets"
+    "# Computations with large datasets\n",
+    "\n",
+    "This notebook introduces a number of commonly-used tools for performing computations with large climate datasets, and demonstrates how common tasks are carried out on chunked data using tools like `dask`"
    ]
   },
   {
@@ -19,6 +21,9 @@
    },
    "outputs": [],
    "source": [
+    "## This is setup for the plots later on in the notebook - on the website this\n",
+    "## cell (and the cells making the diagrams) is hidden by default, using the 'hide-input' cell tag\n",
+    "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numbers\n",
@@ -413,7 +418,7 @@
    "source": [
     "### Time Resampling\n",
     "\n",
-    "Time resampling reduces the temporal frequency of a dataset, say from hourly to daily. You can generally specify the operation to perform - min, mean, max etc."
+    "Time resampling changes the temporal frequency of a dataset, say from hourly to daily. You can generally specify the operation to perform - min, mean, max etc. if going from a higher to lower frequency, or how values are interpolated if going from lower to higher frequency."
    ]
   },
   {
@@ -474,7 +479,7 @@
    "source": [
     "**Resources**\n",
     "\n",
-    " - **Xarray** [resample](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.resample.html) knows about time values, [coarsen](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.coarsen.html) uses sample counts but can work in all dimensions. See [Pandas offset strings](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects) for how to specify different resample windows. Use a reduction operator like `.mean()` etc. after either of these\n",
+    " - **Xarray** [resample](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.resample.html) knows about time values, [coarsen](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.coarsen.html) uses sample counts but can work in all dimensions. See [Pandas offset strings](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects) for how to specify different resample windows. Use a reduction operator like `.mean()` etc. after either of these to go from high to low frequency, or use `.resample().interpolate()` to go from low to high frequency\n",
     " - **CDO** see e.g. `cdo --operators | grep mean` for means on different timescales"
    ]
   },
@@ -727,8 +732,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -742,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
