Add STAC, nci-intake to accessing data

--- a/BigData/accessing_data.ipynb
+++ b/BigData/accessing_data.ipynb
@@ -2,14 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Methods of accessing data and metadata"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "source": [
+    "With the ever-increasing volume of climate data, it is crucial to be able to easily and quickly search for and access datasets of interest. Below are a few tools that may be useful."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## STAC (SpatioTemporal Asset Catalog)\n",
+    "\n",
+    "> \"Enabling online search and discovery of geospatial assets\"\n",
+    "\n",
+    "[STAC](https://stacspec.org) is a specification aimed at standardizing the language around geospatial datasets in order to increase accessability and interoperability across many datasets. It is for use with data stored in the cloud. \n",
+    "\n",
+    "#### Making data easily searchable\n",
+    "At its core, `STAC` provides a [JSON](https://www.json.org/json-en.html) file wrapper around any geospatial data (i.e. any data relating to the Earth). The goal of this wrapper file is to contain all relevant information that a user may want to search for when finding a dataset. In this way, `STAC` seeks to make all earth-related cloud-optimized datasets easily searchable, but does not provide the search tools themselves. `STAC` integrates well with a tool like `intake` that can search for and load the desired datasets."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## Intake\n",
     "\n",
@@ -29,20 +49,30 @@
     "- [intake-thredds](https://intake-thredds.readthedocs.io/en/latest/): to retrieve data from THREDDS data servers (used by NCAR for example)\n",
     "- [intake-xarray](https://intake-xarray.readthedocs.io/en/latest/): to load datasets into [Xarray](http://xarray.pydata.org/en/stable/) containers\n",
     "\n",
+    "#### NCI Data Collection Intake Catalogue\n",
+    "\n",
+    "To access datasets stored at NCI ([National Computational Infrastructure](https://nci.org.au)), there is a dedicated intake cataloge: `nci-intake-catalogue`. Usage and other information can be found on the [nci-intake github site](https://github.com/coecms/nci-intake-catalogue).\n",
+    "\n",
     "#### Other features\n",
     "\n",
     "`Intake` (and many of the plugins) can also be used for a few other tasks:\n",
     "- cataloging system for listing data sources, metadata, and parameters\n",
     "- convenience functions that can be used to, among other things, distribute data catalogs \n",
     "- investigate data sources and create plots using a GUI"
-   ]
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
