--- a/_sources/accessing_data.ipynb
+++ b/_sources/accessing_data.ipynb
@@ -67,15 +67,22 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
-    "Note: This is a test to see if this renders as a blue alert box!\n",
+    "<b>For dataset users:</b> if an intake catalog is already set up on your system, then all you need to know if the code to access the dataset you are interested in!\n",
     "</div>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<div class=\"alert alert-warning\" role=\"alert\">\n",
+    "  <b>For dataset maintainers:</b> more specialized knowledge will be necessary.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
