added references to tools in computations, some not working yet

--- a/BigData/computations.ipynb
+++ b/BigData/computations.ipynb
@@ -95,67 +95,20 @@
    "source": [
     "## General tools\n",
     "\n",
-    "### Python\n",
+    "If you are a {ref}`python` user, the most useful packages for climate data anlysis are {ref}`numpy`, {ref}`pandas`, {ref}`xarray` and {ref}`dask` to work with larger-than memory arrays and parallel data analysis transparently.\n",
     "\n",
-    "#### Pandas\n",
+    "Other useful packages are {ref}`multiprocessing` for simple workflows or {ref}`mpi4py` which is an implementation of the MPI library for Python.\n",
     "\n",
-    "[Pandas](https://pandas.pydata.org/) is a data analysis library based around tabular data, like spreadsheets or CSV files.\n",
+    "If you are a {ref}`fortran` user then {ref}`MPI` is a low-level library, which is very flexible but also more difficult to set up.\n",
     "\n",
-    "#### Xarray\n",
-    "\n",
-    "[Xarray](https://xarray.pydata.org) is a data analysis library based around the NetCDF data model, with Datasets having variables, dimensions, and attributes.\n",
-    "\n",
-    "It has a similar philosophy and set of functions to [Pandas](https://pandas.pydata.org/), only for multidimensional datasets instead of tabular data.\n",
-    "\n",
-    "#### Dask\n",
-    "\n",
-    "[Dask](https://docs.dask.org) is a library for working with larger-than memory arrays and parallel data analysis transparently. Xarray can use Dask arrays as a backend when opening a NetCDF file with the `chunks` attribute, and Dask has its own Pandas-like DataFrame implementation.\n",
-    "\n",
-    "Dask splits an array up into chunks. When doing operations on a Dask array, rather than evaluating the operation immediately Dask will create a task graph of what operations need to be run to create the output array chunks from the input array chunks. The task graph is only evaluated when results are needed (e.g. by saving to a file or creating a plot), and different chunks can be evaluated in parallel.\n",
-    "\n",
-    "It's best to start a [dask.distributed.Client](https://docs.dask.org/en/latest/setup/single-distributed.html) to allow Dask to process data in parallel with multiple processes.\n",
-    "\n",
-    "#### multiprocessing\n",
-    "\n",
-    "The built-in Python [multiprocessing](https://docs.python.org/3/library/multiprocessing.html) library has low-level tools for parallel computing. You can create a 'pool' of processes, then given a function and a list of arguments it can run that function on each argument in parallel.\n",
-    "\n",
-    "#### mpi4py\n",
-    "\n",
-    "[mpi4py](https://mpi4py.readthedocs.io/) is an implementation of the MPI library for Python, from which you can create parallel methods the same way as Fortran sending data between processes via messages.\n",
-    "\n",
-    "### Fortran/C\n",
-    "\n",
-    "#### MPI\n",
-    "\n",
-    "[MPI](https://en.wikipedia.org/wiki/Message_Passing_Interface) is a generic method of parallising to more than one computer, it's commonly used in HPC to enable programs running on different compute nodes to communicate.\n",
-    "\n",
-    "MPI is a low-level library, which makes it flexible to a lot of use cases but also more difficult to set up. Numerical models often use MPI with a program running on each compute node computing part of the model grid, the boundaries between domains being syncronised with MPI messages.\n",
-    "\n",
-    "**Resources**\n",
-    "\n",
-    " - [MPI function list](https://www.open-mpi.org/doc/current/)\n",
-    " - [MPI standard](https://www.mpi-forum.org/docs/)\n",
     "\n",
     "### Command-line tools\n",
     "\n",
-    "#### CDO\n",
-    "\n",
-    "[CDO](https://code.mpimet.mpg.de/projects/cdo) has a large number of common climate analysis functions that can be used to analyse cf-compliant netcdf data.\n",
+    "{ref}`cdo` and {ref}`nco` are powerful command line tools.\n",
     "\n",
     "For large datasets, if you can process each file independently you can parallelise using e.g. [GNU Parallel](https://www.gnu.org/software/parallel/) or a Python `multiprocessing.Pool.map`.\n",
     "\n",
-    "You can use multiple parallel threads in CDO with `cdo -P <nthreads> ...`\n",
-    "\n",
-    "**Resources**\n",
-    "\n",
-    " - `cdo --operators` will give a list of all available commands\n",
-    " - `cdo --help COMMAND` will show detailed help\n",
-    "\n",
-    "#### NCO\n",
-    "\n",
-    "[NCO](http://nco.sourceforge.net/) is a powerful tool for working with NetCDF files and metadata, though alongside that power it is also very complex to use. It can extract variables, modify attributes, change file chunking and compression and combine ensembles and timeseries alongside other functions.\n",
-    "\n",
-    "You can use multiple parallel threads in NCO with `ncks --thr_nbr <nthreads> ...`\n",
+    "You can also use multiple parallel threads in CDO with `cdo -P <nthreads> ...` and in NCO with `ncks --thr_nbr <nthreads> ...`\n",
     " \n",
     "### Other languages (Matlab, R, etc.)\n",
     "\n",
