first follow up of reviews of pull request #41

--- a/BigData/computations.ipynb
+++ b/BigData/computations.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "## General tools\n",
     "\n",
-    "If you are a {ref}`python` user, the most useful packages for climate data are {ref}`numpy<pyanalysis>`, {ref}`pandas<pyanalysis>`, {ref}`xarray<pyanalysis>` and {ref}`dask` to work with larger-than memory arrays and parallel data analysis transparently.\n",
+    "If you are a {ref}`python` user, the most useful packages for climate data are {ref}`numpy<pyanalysis>`, {ref}`pandas<pyanalysis>`, {ref}`xarray<pyanalysis>` and {term}`dask` to work with larger-than memory arrays and parallel data analysis transparently.\n",
     "\n",
     "Other useful packages are {term}`multiprocessing` for simple workflows or {term}`mpi4py` which is an implementation of the MPI library for Python.\n",
     "\n",
