deploy: c4ccbb3b50a9db1467eec87b40eb3af6507f9e8c

--- a/_sources/computations.ipynb
+++ b/_sources/computations.ipynb
@@ -90,6 +90,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "familiar-episode",
+   "metadata": {},
+   "source": [
+    "## General tools\n",
+    "\n",
+    "If you are a {ref}`python` user, the most useful packages for climate data are {ref}`numpy<pyanalysis>`, {ref}`pandas<pyanalysis>`, {ref}`xarray<pyanalysis>` and {term}`dask` to work with larger-than memory arrays and parallel data analysis transparently.\n",
+    "\n",
+    "Other useful packages are {term}`multiprocessing` for simple workflows or {term}`mpi4py` which is an implementation of the MPI library for Python.\n",
+    "\n",
+    "If you are a {ref}`fortran` user then {ref}`MPI` is a low-level library, which is very flexible but also more difficult to set up.\n",
+    "\n",
+    "\n",
+    "#### Command-line tools\n",
+    "\n",
+    "{ref}`cdo` and {ref}`nco` are powerful command line tools.\n",
+    "\n",
+    "For large datasets, if you can process each file independently you can parallelise using e.g. [GNU Parallel](https://www.gnu.org/software/parallel/) or a Python `multiprocessing.Pool.map`.\n",
+    "\n",
+    "You can also use multiple parallel threads in CDO with `cdo -P <nthreads> ...` and in NCO with `ncks --thr_nbr <nthreads> ...`\n",
+    " \n",
+    "#### Other languages (Matlab, R, etc.)\n",
+    "\n",
+    "While we're not aware of anything quite as nice as Xarray and Dask for other languages, most languages have libraries for reading NetCDF files and working with MPI.\n",
+    "\n",
+    "If you have suggestions for other libraries we can list here please let us know by [opening a ticket](https://github.com/ACDguide/BigData/issues/new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "neither-armstrong",
    "metadata": {},
    "source": [
