--- a/_sources/accessing_data.ipynb
+++ b/_sources/accessing_data.ipynb
@@ -32,6 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(intake)=\n",
     "## Intake\n",
     "\n",
     "> \"Taking the pain out of data access and distribution\"\n",
@@ -91,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
