added a small section regarding intake and distributed client - resolving issue #42

--- a/BigData/accessing_data.ipynb
+++ b/BigData/accessing_data.ipynb
@@ -63,7 +63,13 @@
     "- investigate data sources and create plots using a GUI\n",
     "\n",
     "#### Working with authorised catalogues\n",
-    "There is no direct way for `intake` to open and load authorised catalogues. Including the username and password in the URL helps open the catalogue, but further data processing using Dask generates an error message relating to the \"nonnumeric port\" in the URL. Nikhil Garg (Data61, CSIRO) advises on creating a [`.netrc` file](https://linux.die.net/man/5/netrc) and a [`.dodsrc` file](www.po.gso.uri.edu/tracking/tracking/vodhub/docs/dodsrc.html) in the home directory to resolve this issue. These files are used by the netCDF4 library; when intake uses Xarray and Dask to access the files, netCDF4 is utilised in the background. The `.netrc` file contains details about the machine, username, and password. It is a single-line file that can be written in the following format: `machine machine_name login user_ID password user_password`. The `.dodsrc` file points to the location of the `.netrc` file, and can be written as a single-line: `HTTP.NETRC=YourHomeDirectory/.netrc`. Note, when working on [NCI OOD](https://opus.nci.org.au/display/OOD), these files need to be created in the OOD home directory. Hint: According to Nikhil, this method works for any tool (e.g., R, cdo, nco). "
+    "There is no direct way for `intake` to open and load authorised catalogues. Including the username and password in the URL helps open the catalogue, but further data processing using Dask generates an error message relating to the \"nonnumeric port\" in the URL. Nikhil Garg (Data61, CSIRO) advises on creating a [`.netrc` file](https://linux.die.net/man/5/netrc) and a [`.dodsrc` file](www.po.gso.uri.edu/tracking/tracking/vodhub/docs/dodsrc.html) in the home directory to resolve this issue. These files are used by the netCDF4 library; when intake uses Xarray and Dask to access the files, netCDF4 is utilised in the background. The `.netrc` file contains details about the machine, username, and password. It is a single-line file that can be written in the following format: `machine machine_name login user_ID password user_password`. The `.dodsrc` file points to the location of the `.netrc` file, and can be written as a single-line: `HTTP.NETRC=YourHomeDirectory/.netrc`. Note, when working on [NCI OOD](https://opus.nci.org.au/display/OOD), these files need to be created in the OOD home directory. Hint: According to Nikhil, this method works for any tool (e.g., R, cdo, nco). \n",
+    "\n",
+    "#### Intake and distributed client\n",
+    "`Intake` is not working with a distributed client. You can avoid using distributed client or open the data catalogue link with Xarray to work around this issue, e.g., \n",
+    "```python\n",
+    "ds = xarray.open_dataset(\"catalogue_link\", chunks={'lat': 100, 'lon': 100, 'time': 500})\n",
+    "```"
    ]
   },
   {
