--- a/_sources/computations.ipynb
+++ b/_sources/computations.ipynb
@@ -361,7 +361,8 @@
     " \n",
     "**Demonstrations**\n",
     " - Python - [Seasonal average demo](http://xarray.pydata.org/en/stable/examples/monthly-means.html) from Xarray documentation\n",
-    " - Python - [Monthly climatology](https://coecms-training.github.io/parallel/case-studies/climatology_multivar.html) from CLEX CMS"
+    " - Python - [Monthly climatology](https://coecms-training.github.io/parallel/case-studies/climatology_multivar.html) from CLEX CMS\n",
+    " - Python - [Monthly climatology with `coarsen`](https://climate-cms.org/posts/2021-07-29-coarsen_climatology.html) from CLEX-CMS"
    ]
   },
   {
@@ -513,13 +514,17 @@
     " - **Xarray** [coarsen](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.coarsen.html) can only lower the resolution, combining an integer number of gridpoints in each direction\n",
     " - [**xesmf**](https://xesmf.readthedocs.io/en/latest/) Xarray interface to ESMF's regridder\n",
     " - [**ESMF**](https://earthsystemmodeling.org/docs/release/ESMF_8_0_1/ESMF_refdoc/node3.html) has some useful command line tools, can generate weights with `ESMF_RegridWeightGen` or regrid with `ESMF_Regrid`, lots of options\n",
+    " - [**climtas**](https://climtas.readthedocs.io/en/latest/api/regrid.html) helps setting up a dask-aware regridding\n",
     " - **NCO** Can apply CDO or ESMF weights with `ncks --map`\n",
     " - **CDO** Can generate weights and regrid - `cdo --operators | grep gen`, `cdo --operators | grep remap`\n",
     " \n",
     "**Demonstrations**\n",
     "\n",
-    " - Python - [xesmf regridding](https://nbviewer.jupyter.org/github/COSIMA/cosima-recipes/blob/master/DocumentedExamples/Regridding.ipynb) from COSIMA\n",
-    " - Python - [xesmf regridding](https://coecms-training.github.io/parallel/case-studies/regridding.html) from CLEX CMS"
+    " - Python - [xesmf regridding 1](https://nbviewer.jupyter.org/github/COSIMA/cosima-recipes/blob/master/DocumentedExamples/Regridding.ipynb) from COSIMA\n",
+    " - Python - [xesmf regridding 2](https://coecms-training.github.io/parallel/case-studies/regridding.html) from CLEX CMS\n",
+    " - Python - [xesmf regridding 3](https://climate-cms.org/posts/2021-04-09-xesmf-regrid.html) from CLEX CMS\n",
+    " - Python - [regridding to a different coordinate system using pyproj part 1](https://climate-cms.org/posts/2021-10-01-pyproj.html) from CLEX-CMS\n",
+    " - Python - [regridding to a different coordinate system using pyproj part 2](https://climate-cms.org/posts/2021-11-02-pyproj-regrid.html) from CLEX-CMS\n"
    ]
   },
   {
