added colour boxes, fixed formatting of platforms headers, added intake example

--- a/BigData/computations/computations.ipynb
+++ b/BigData/computations/computations.ipynb
@@ -102,15 +102,18 @@
     "If you are a {ref}`fortran` user then {ref}`MPI` is a low-level library, which is very flexible but also more difficult to set up.\n",
     "\n",
     "\n",
-    "#### Command-line tools\n",
+    "### Command-line tools\n",
     "\n",
     "{ref}`cdo` and {ref}`nco` are powerful command line tools.\n",
     "\n",
     "For large datasets, if you can process each file independently you can parallelise using e.g. [GNU Parallel](https://www.gnu.org/software/parallel/) or a Python `multiprocessing.Pool.map`.\n",
     "\n",
-    "You can also use multiple parallel threads in CDO with `cdo -P <nthreads> ...` and in NCO with `ncks --thr_nbr <nthreads> ...`\n",
+    "You can also use multiple parallel threads in CDO with <br>\n",
+    "    `cdo -P <nthreads> ...`  <br>\n",
+    "and in NCO with <br>\n",
+    "    `ncks --thr_nbr <nthreads> ...`\n",
     " \n",
-    "#### Other languages (Matlab, R, etc.)\n",
+    "### Other languages (Matlab, R, etc.)\n",
     "\n",
     "While we're not aware of anything quite as nice as Xarray and Dask for other languages, most languages have libraries for reading NetCDF files and working with MPI.\n",
     "\n",
@@ -200,15 +203,20 @@
    "id": "chicken-precipitation",
    "metadata": {},
    "source": [
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Numpy** [statistics functions](https://numpy.org/doc/stable/reference/routines.statistics.html)\n",
     " - **Dask** also has optimised implementations for its arrays, e.g. [dask.array.mean](https://docs.dask.org/en/latest/array-api.html#dask.array.mean)\n",
     " - **Xarray** functions work the same as numpy, but keep the xarray metadata and you can use dimension names instead of axis numbers. [Weighted](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.weighted.html) operations are also available\n",
     " - **CDO** `cdo --operators | grep fld` will give a list of basic statistics operations\n",
-    " \n",
-    "**Demonstrations**\n",
-    " - Python - [Weighted Mean](http://xarray.pydata.org/en/stable/examples/area_weighted_temperature.html) from Xarray documentation\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-warning\" role=\"alert\"> \n",
+    "<b>Demonstrations</b>\n",
+    "    \n",
+    " - **Python** [Weighted Mean](http://xarray.pydata.org/en/stable/examples/area_weighted_temperature.html) from Xarray documentation\n",
+    "</div>\n",
     "\n",
     "### Percentiles / Median\n",
     "\n",
@@ -274,12 +282,14 @@
    "id": "united-moses",
    "metadata": {},
    "source": [
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Numpy** [percentile](https://numpy.org/doc/stable/reference/generated/numpy.percentile.html) and the more expensive [nanpercentile](https://numpy.org/doc/stable/reference/generated/numpy.nanpercentile.html)\n",
     " - **Dask** [percentile](https://docs.dask.org/en/latest/array-api.html#dask.array.percentile) uses approximate methods so is less memory intensive, but only works on 1D data\n",
-    " - **Xarray** [quantile](xarray.pydata.org/en/stable/generated/xarray.Dataset.quantile.html) uses values between 0 and 1 instead of percents, Dask data must not be chunked along the axis of interest\n",
-    " - **CDO** `cdo --operators | grep pctl` will give a list of percentile related operations."
+    " - **Xarray** [quantile](https://xarray.pydata.org/en/stable/generated/xarray.Dataset.quantile.html) uses values between 0 and 1 instead of percents, Dask data must not be chunked along the axis of interest\n",
+    " - **CDO** `cdo --operators | grep pctl` will give a list of percentile related operations.\n",
+    "</div>"
    ]
   },
   {
@@ -354,15 +364,20 @@
    "id": "spectacular-standard",
    "metadata": {},
    "source": [
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Xarray** [groupby](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.groupby.html) then a reduction operator like `.mean()` etc.\n",
     " - **CDO** `cdo --operators | grep 'Multi-year'` for a list of climatology operations\n",
-    " \n",
-    "**Demonstrations**\n",
-    " - Python - [Seasonal average demo](http://xarray.pydata.org/en/stable/examples/monthly-means.html) from Xarray documentation\n",
-    " - Python - [Monthly climatology](https://coecms-training.github.io/parallel/case-studies/climatology_multivar.html) from CLEX CMS\n",
-    " - Python - [Monthly climatology with `coarsen`](https://climate-cms.org/posts/2021-07-29-coarsen_climatology.html) from CLEX-CMS"
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-warning\" role=\"alert\">\n",
+    "<b>Demonstrations</b>\n",
+    "    \n",
+    " - **Python** [Seasonal average demo](http://xarray.pydata.org/en/stable/examples/monthly-means.html) from Xarray documentation\n",
+    " - **Python** [Monthly climatology](https://coecms-training.github.io/parallel/case-studies/climatology_multivar.html) from CLEX CMS\n",
+    " - **Python** [Monthly climatology with `coarsen`](https://climate-cms.org/posts/2021-07-29-coarsen_climatology.html) from CLEX-CMS\n",
+    "</div>"
    ]
   },
   {
@@ -431,10 +446,12 @@
    "id": "referenced-rebound",
    "metadata": {},
    "source": [
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Xarray** [resample](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.resample.html) knows about time values, [coarsen](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.coarsen.html) uses sample counts but can work in all dimensions. See [Pandas offset strings](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects) for how to specify different resample windows. Use a reduction operator like `.mean()` etc. after either of these to go from high to low frequency, or use `.resample().interpolate()` to go from low to high frequency\n",
-    " - **CDO** see e.g. `cdo --operators | grep mean` for means on different timescales"
+    " - **CDO** see e.g. `cdo --operators | grep mean` for means on different timescales\n",
+    "</div>"
    ]
   },
   {
@@ -509,7 +526,8 @@
    "id": "dutch-marker",
    "metadata": {},
    "source": [
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Xarray** [coarsen](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.coarsen.html) can only lower the resolution, combining an integer number of gridpoints in each direction\n",
     " - [**xesmf**](https://xesmf.readthedocs.io/en/latest/) Xarray interface to ESMF's regridder\n",
@@ -517,14 +535,17 @@
     " - [**climtas**](https://climtas.readthedocs.io/en/latest/api/regrid.html) helps setting up a dask-aware regridding\n",
     " - **NCO** Can apply CDO or ESMF weights with `ncks --map`\n",
     " - **CDO** Can generate weights and regrid - `cdo --operators | grep gen`, `cdo --operators | grep remap`\n",
-    " \n",
-    "**Demonstrations**\n",
+    "</div>\n",
     "\n",
-    " - Python - [xesmf regridding 1](https://nbviewer.jupyter.org/github/COSIMA/cosima-recipes/blob/master/DocumentedExamples/Regridding.ipynb) from COSIMA\n",
-    " - Python - [xesmf regridding 2](https://coecms-training.github.io/parallel/case-studies/regridding.html) from CLEX CMS\n",
-    " - Python - [xesmf regridding 3](https://climate-cms.org/posts/2021-04-09-xesmf-regrid.html) from CLEX CMS\n",
-    " - Python - [regridding to a different coordinate system using pyproj part 1](https://climate-cms.org/posts/2021-10-01-pyproj.html) from CLEX-CMS\n",
-    " - Python - [regridding to a different coordinate system using pyproj part 2](https://climate-cms.org/posts/2021-11-02-pyproj-regrid.html) from CLEX-CMS\n"
+    "<div class=\"alert alert-warning\" role=\"alert\">\n",
+    "<b>Demonstrations</b>\n",
+    "\n",
+    " - **Python** [xesmf regridding 1](https://nbviewer.jupyter.org/github/COSIMA/cosima-recipes/blob/master/DocumentedExamples/Regridding.ipynb) from COSIMA\n",
+    " - **Python** [xesmf regridding 2](https://coecms-training.github.io/parallel/case-studies/regridding.html) from CLEX CMS\n",
+    " - **Python** [xesmf regridding 3](https://climate-cms.org/posts/2021-04-09-xesmf-regrid.html) from CLEX CMS\n",
+    " - **Python** [regridding to a different coordinate system using pyproj part 1](https://climate-cms.org/posts/2021-10-01-pyproj.html) from CLEX-CMS\n",
+    " - **Python** [regridding to a different coordinate system using pyproj part 2](https://climate-cms.org/posts/2021-11-02-pyproj-regrid.html) from CLEX-CMS\n",
+    "</div>"
    ]
   },
   {
@@ -548,10 +569,12 @@
     "\n",
     "Some transformations may benefit from calculating the interpolation logarithmically.\n",
     "\n",
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "    <b>Resources</b>\n",
     "\n",
     " - **xgcm** [Vertical interpolation](https://xgcm.readthedocs.io/en/latest/transform.html) of Xarray datasets\n",
-    " - **metpy** [linear](https://unidata.github.io/MetPy/latest/api/generated/metpy.interpolate.interpolate_1d.html#metpy.interpolate.interpolate_1d) and [log](https://unidata.github.io/MetPy/latest/api/generated/metpy.interpolate.log_interpolate_1d.html#metpy.interpolate.log_interpolate_1d) interpolation along an axis"
+    " - **metpy** [linear](https://unidata.github.io/MetPy/latest/api/generated/metpy.interpolate.interpolate_1d.html#metpy.interpolate.interpolate_1d) and [log](https://unidata.github.io/MetPy/latest/api/generated/metpy.interpolate.log_interpolate_1d.html#metpy.interpolate.log_interpolate_1d) interpolation along an axis\n",
+    "</div>"
    ]
   },
   {
@@ -637,12 +660,14 @@
    "id": "formed-revision",
    "metadata": {},
    "source": [
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Xarray** [rolling](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.rolling.html) then a reduction operator like `.mean()`\n",
     " - **Dask** [map_overlap](https://docs.dask.org/en/latest/array-overlap.html) adds a halo to map_blocks\n",
     " - [**bottleneck**](https://github.com/pydata/bottleneck) provides optimised rolling operations on Numpy arrays, used by Xarray automatically\n",
-    " - **CDO** see `cdo --operators | grep run` for related function names"
+    " - **CDO** see `cdo --operators | grep run` for related function names\n",
+    "</div>"
    ]
   },
   {
@@ -658,14 +683,18 @@
     "\n",
     "Mapping just refers to applying a function to an array, returning a new array. Reduction is similar, however it returns an array with less dimensions than you started with (e.g. a mean over time).\n",
     "\n",
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Xarray** functions keep metadata - [apply_ufunc](http://xarray.pydata.org/en/stable/generated/xarray.apply_ufunc.html) runs an arbitrary function that works on a numpy array, [map_blocks](http://xarray.pydata.org/en/stable/generated/xarray.map_blocks.html) applys a function to each dask chunk with the coordinates and attributes available\n",
     " - **Dask** [map_blocks](https://docs.dask.org/en/latest/array-api.html#dask.array.map_blocks) provides more low-level control than the Xarray version, but you don't get the metadata\n",
+    "</div>\n",
     "\n",
-    "**Demonstrations**\n",
+    "<div class=\"alert alert-warning\" role=\"alert\">\n",
+    "<b>Demonstrations</b>\n",
     "\n",
-    " - Python - [Converting a function from 1D to ND](https://coecms-training.github.io/parallel/case-studies/oned_to_nd_rewrite.html) from CLEX CMS\n",
+    " - **Python** - [Converting a function from 1D to ND](https://coecms-training.github.io/parallel/case-studies/oned_to_nd_rewrite.html) from CLEX CMS\n",
+    "</div>\n",
     "\n",
     "### Rechunking\n",
     "\n",
@@ -673,11 +702,13 @@
     "\n",
     "Rechunking may also combine multiple input files - say a dataset has one file per model day that contains all of its variables, for a timeseries analysis you may want to swap this to one file per variable per model year to reduce the number of files that need to be opened in the analysis.\n",
     "\n",
-    "**Resources**\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "<b>Resources</b>\n",
     "\n",
     " - **Xarray** The [encoding](http://xarray.pydata.org/en/stable/user-guide/io.html#chunk-based-compression) argument to `to_dataset()` can specify file chunking, combine multiple files with [open_mfdataset](http://xarray.pydata.org/en/stable/generated/xarray.open_mfdataset.html) or [concat](http://xarray.pydata.org/en/stable/generated/xarray.concat.html)\n",
     " - [**Rechunker**](https://github.com/pangeo-data/rechunker) A Python library for rechunking files in *Zarr* format\n",
-    " - **NCO** There are several arguments to specify output chunking, see e.g. `ncks --help | grep cnk`. To combine input files along time see `ncrcat`\n"
+    " - **NCO** There are several arguments to specify output chunking, see e.g. `ncks --help | grep cnk`. To combine input files along time see `ncrcat`\n",
+    "</div>"
    ]
   },
   {
