first draft of content restructure by paola, NB there are also some additions

--- a/BigData/computations/computations.ipynb
+++ b/BigData/computations/computations.ipynb
@@ -301,7 +301,26 @@
     "\n",
     "Climatologies combine multiple years worth of data into a single sample year, for instance a daily mean climatology would output a year of data, with each day in the output the mean of all the days with the same month and day in the input.\n",
     "\n",
-    "Leap years require some consideration in a daily climatology, as those days will have 1/4 the samples of other days. Also consider how you are counting - with a day of year counting Feb 29 in a leap year will be matched up with 1 Mar in a non-leap year. "
+    "Leap years require some consideration in a daily climatology, as those days will have 1/4 the samples of other days. Also consider how you are counting - with a day of year counting Feb 29 in a leap year will be matched up with 1 Mar in a non-leap year.\n",
+    "\n",
+    "````{admonition} Tip to deal with a leap year\n",
+    "If you have leap years in your timeseries, instead of doing a group_by on time.dt.day_of_year,\n",
+    "you can create a new coordinate with a day_of_year that takes into account leap years.\n",
+    "Below is an example code, where the new `doy` coordinate has an extra day added to each day\n",
+    "from March on for non-leap year.\n",
+    "In this way the 1st of March for example is the 61th day of the year, regardless that the year is a leap year or not. \n",
+    "\n",
+    "```{code}\n",
+    "doy_original = t.dt.dayofyear\n",
+    "march_or_later = t.dt.month >= 3     # True from March onwards\n",
+    "not_leap_year =  ~t.dt.is_leap_year  # True if year is not a leap year\n",
+    "# When the two filters are both True, 1 is added to the new day of the\n",
+    "# year coordinate value\n",
+    "doy = doy_original + (not_leap_year & march_or_later)\n",
+    "# add new coordinate to timeseries ts\n",
+    "ts.coords[\"doy\"] = doy\n",
+    "```\n",
+    "````"
    ]
   },
   {
@@ -737,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
