--- a/_sources/computations/computations.ipynb
+++ b/_sources/computations/computations.ipynb
@@ -115,7 +115,7 @@
     " \n",
     "### Other languages (Matlab, R, etc.)\n",
     "\n",
-    "While we're not aware of anything quite as nice as Xarray and Dask for other languages, most languages have libraries for reading NetCDF files and working with MPI.\n",
+    "While we're not aware of anything quite as nice as Xarray and Dask for other languages, most languages have libraries for reading netCDF files and working with MPI.\n",
     "\n",
     "If you have suggestions for other libraries we can list here please let us know by [opening a ticket](https://github.com/ACDguide/BigData/issues/new)"
    ]
@@ -737,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
