--- a/_sources/computations/chunking.ipynb
+++ b/_sources/computations/chunking.ipynb
@@ -13,7 +13,7 @@
    "id": "aboriginal-folks",
    "metadata": {},
    "source": [
-    "# Data chunking\n",
+    "# Data chunking with dask examples\n",
     "\n",
     "The previous section about [computations with large datasets](https://acdguide.github.io/BigData/computations.html) shows diagrams with various operations computed on chunks of data. Here, we will go into more depth on what chunking is, why it matters, and some real-world examples."
    ]
