accept suggestion - this is a nice simple way of expressing why use dask
Co-authored-by: Paige Martin <paigemar@umich.edu>

--- a/BigData/computations/computations.ipynb
+++ b/BigData/computations/computations.ipynb
@@ -117,7 +117,7 @@
     "and in NCO with <br>\n",
     "    `ncks --thr_nbr <nthreads> ...`\n",
     "\n",
-    "Python `multiprocessing.Pool.map` can also be used when working in a python environment and parallel behaviour is needed (not a sensible alternative to `dask` for data processing).\n",
+    "Python `multiprocessing.Pool.map` can also be used when working in a python environment and parallel behaviour is needed. Dask is typically easier to use for parallel data analysis, as it figures out on its own how to implement the parallelisation and can also be scaled to a cluster.\n",
     "\n",
     "### Other languages (Matlab, R, etc.)\n",
     "\n",
