--- a/_sources/computations/computations.ipynb
+++ b/_sources/computations/computations.ipynb
@@ -104,15 +104,21 @@
     "\n",
     "### Command-line tools\n",
     "\n",
-    "{ref}`cdo` and {ref}`nco` are powerful command line tools.\n",
+    "There are a number of ways to work with big data on the command line.\n",
     "\n",
-    "For large datasets, if you can process each file independently you can parallelise using e.g. [GNU Parallel](https://www.gnu.org/software/parallel/) or a Python `multiprocessing.Pool.map`.\n",
+    "To parallelise tasks on the command line, there are 3 general options:\n",
+    "* [GNU Parallel](https://www.gnu.org/software/parallel/) - basic option, good for 10s-hundreds of tasks (and things like parallel rsync). Use when you can process each file or group of files independently.\n",
+    "* [nci-parallel](https://opus.nci.org.au/display/Help/nci-parallel) - uses MPI with core binding so you'll get more efficient performance for, say, regridding a million model output files\n",
+    "* [xargs](https://en.wikipedia.org/wiki/Xargs) - some people prefer `xargs` to `parallel`, it can be used in conjunction with commands like `find` to permit operations simultaneously on many files.\n",
     "\n",
+    "{ref}`cdo` and {ref}`nco` are powerful command line tools built around netCDF data.\n",
     "You can also use multiple parallel threads in CDO with <br>\n",
     "    `cdo -P <nthreads> ...`  <br>\n",
     "and in NCO with <br>\n",
     "    `ncks --thr_nbr <nthreads> ...`\n",
-    " \n",
+    "\n",
+    "Python `multiprocessing.Pool.map` can also be used when working in a python environment and parallel behaviour is needed. Dask is typically easier to use for parallel data analysis, as it figures out on its own how to implement the parallelisation and can also be scaled to a cluster.\n",
+    "\n",
     "### Other languages (Matlab, R, etc.)\n",
     "\n",
     "While we're not aware of anything quite as nice as Xarray and Dask for other languages, most languages have libraries for reading netCDF files and working with MPI.\n",
